:sparkles: Added realtime updates
